--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 			<li><a href="biography.html">Hello World!</a></li>
 		</ul>
 	</p>
+	
+	<img src="imgs/heima.png" alt="Bird" width="100"
+ height="100" />
 
  </html>
