add image source

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="biography.html">Hello World!</a></li>
+			<li>My name is <strong>Shaina</strong>!</li>
 		</ul>
 	</p>
 	
